; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/sdiff/extr_sdiff.c_printd.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/sdiff/extr_sdiff.c_printd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@file1ln = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"file1 ended early in delete\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @printd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @printd(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %6

6:                                                ; preds = %19, %2
  %7 = load i64, i64* @file1ln, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ule i64 %7, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %6
  %11 = load i32*, i32** %3, align 8
  %12 = call i8* @xfgets(i32* %11)
  store i8* %12, i8** %5, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %10
  %15 = call i32 @errx(i32 2, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %10
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @enqueue(i8* %17, i8 signext 60, i32* null)
  br label %19

19:                                               ; preds = %16
  %20 = load i64, i64* @file1ln, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* @file1ln, align 8
  br label %6

22:                                               ; preds = %6
  %23 = call i32 (...) @processq()
  ret void
}

declare dso_local i8* @xfgets(i32*) #1

declare dso_local i32 @errx(i32, i8*) #1

declare dso_local i32 @enqueue(i8*, i8 signext, i32*) #1

declare dso_local i32 @processq(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
